Exp-1/output/f00768_generate_python_code_test.err
Traceback (most recent call last):
  File "output/f00768_generate_python_code_test.py", line 1, in <module>
    from f00768_generate_python_code import *
  File "/root/Experiments/output/f00768_generate_python_code.py", line 7
    In some cases, the output `hidden_state` may be incorrect if the `input_ids` include padding tokens. To demonstrate, load a model and tokenizer. You can access a model's `pad_token_id` to see its value. The `pad_token_id` may be `None` for some models, but you can always manually set it.
       ^
SyntaxError: invalid syntax
